<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:id="@+id/linearlayout_buttons"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginTop="10sp">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_score"
            android:id="@+id/score"
            android:layout_weight="1"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_ranking"
            android:id="@+id/ranking"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@drawable/button_practice"
            android:textAppearance="@android:style/TextAppearance.Holo.Small"
            android:drawableLeft="@drawable/games_leaderboards_green_64"
            android:paddingLeft="25sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/score_header"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/tvScoreTopboardHeader" />
</LinearLayout>