<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="15sp" >

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/level"
    android:id="@+id/tvLevel1"
    android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XX"
        android:id="@+id/level"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_below="@+id/tvLevel1"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/mode"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:textStyle="bold|italic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:textColor="@android:color/black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:adjustViewBounds="true"
        android:src="@drawable/lives_icon_16"
        android:layout_marginTop="6sp"
        android:layout_below="@+id/tvLives"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lives"
        android:id="@+id/tvLives"

        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XX"
        android:id="@+id/lives"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_below="@+id/tvLives"
        android:layout_alignParentRight="false"
        android:textColor="@android:color/black"
        android:layout_toLeftOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_continue"
        android:id="@+id/topBarMessage"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="15dp"
        android:layout_below="@id/mode"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>