<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="15sp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:id="@+id/tvLevel1"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XX"
        android:id="@+id/level"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_below="@+id/tvLevel1"
        android:textColor="@android:color/black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/lives_icon_16"
        android:layout_marginTop="6sp"
        android:layout_below="@+id/tvLives"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5sp"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lives"
        android:id="@+id/tvLives"

        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XX"
        android:id="@+id/lives"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_below="@+id/tvLives"
        android:layout_alignParentRight="false"
        android:textColor="@android:color/black"
        android:layout_toLeftOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_continue"
        android:id="@+id/topBarMessage"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="50sp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/time"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/tvTime" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:progress="30"
        android:max="30"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvTime"
        android:layout_marginLeft="150sp"
        android:progressDrawable="@drawable/progressbar_blue"
        android:minHeight="5sp"
        android:layout_marginTop="4sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/time"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvTime"
        android:layout_marginTop="12sp"
        android:textColor="@android:color/black" />

</RelativeLayout>