<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:dither="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background_grey"
        android:tileMode="disabled"
        android:visibility="visible" />

<LinearLayout
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/containerHelp"
    android:gravity="center"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/help_title"
        android:id="@+id/help_title"
        android:gravity="center"
        android:layout_weight="0"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="15sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Medium Text"
            android:id="@+id/help"
            android:autoText="false"
            android:ellipsize="marquee"
            android:textColor="@android:color/black" />

    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_button"
        android:id="@+id/help_button"
        android:paddingLeft="50sp"
        android:paddingRight="50sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:background="@drawable/button_practice"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_checkbox"
        android:id="@+id/help_checkBox"
        android:checked="false"
        android:gravity="center"
        android:layout_marginBottom="10sp"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</LinearLayout>
    </FrameLayout>