<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/frame_button1"
        android:layout_marginBottom="5sp"></FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/frame_button2"
        android:layout_marginBottom="5sp"></FrameLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/button3"
        android:id="@+id/button3"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold"
        android:layout_weight="1"
        android:background="@drawable/button_practice"
        android:layout_marginBottom="5sp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/button6"
        android:id="@+id/button6"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold"
        android:layout_weight="1"
        android:drawableLeft="@drawable/rankings_64"
        android:background="@drawable/button_practice"
        android:layout_marginBottom="5sp"
        android:padding="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/button4"
            android:id="@+id/button4"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:layout_weight="1"
            android:drawableLeft="@drawable/settings_64"
            android:background="@drawable/button_practice"
            android:padding="20dp"
            android:layout_marginBottom="5sp" />

        <!--<ImageButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/button4"
            android:src="@drawable/settings_64"
            android:background="@drawable/button_practice"
            android:layout_weight="1"
            android:layout_marginRight="3sp" />-->

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/button5"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:src="@drawable/googleplus_64"
            android:background="@drawable/button_practice"
            android:layout_weight="1"
            android:layout_marginLeft="2sp"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>

